fix z-index so won't intervene with global player on footer

--- a/src/assets/styles/cmps/UserMsg.css
+++ b/src/assets/styles/cmps/UserMsg.css
@@ -3,7 +3,7 @@
   bottom: 100px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 10001;
+  z-index: 999;
 
   display: flex;
   align-items: center;
